--- a/READMe
+++ b/READMe
@@ -15,7 +15,7 @@ Installation
 Clone the repository:
 bash
 Copy code
-git clone https://github.com/yourusername/weather-app.git
+git clone https://github.com/Phthusi/weatherApp
 Navigate to the project folder:
 bash
 Copy code
